--- a/style/common.css
+++ b/style/common.css
@@ -141,9 +141,6 @@ h4 {
   padding: 3px 10px;
 }
 
-#container table tr {
-  transition: 0.3s;
-}
 #container table tr:nth-child(odd) {
   background-color: #f5f5f5;
 }
@@ -166,13 +163,13 @@ h4 {
   color: white;
 }
 #bar .lang {
+  transition: all 0.3s;
   padding: 5px;
   font-weight: 400;
   border: solid 1px white;
 }
 
 #bar .lang:hover {
-  transition: 0.7s;
   background-color: white;
   color: #253965;
 }
