--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -465,3 +465,77 @@ body::-webkit-scrollbar {
     margin-left: 30px;
   }
 }
+
+.search_container {
+  width: 300px;
+}
+.search_container input[type="text"] {
+  padding: 3px 5px;
+  border: none;
+  width: 150px;
+  height: 2em;
+  overflow: hidden;
+}
+.search_back {
+  width: 230px;
+  padding: 3px 0px;
+  text-align: center;
+  border-radius: 20px;
+  background-color: white;
+  display: inline-block;
+}
+.search_container input[type="text"]:focus {
+  outline: 0;
+}
+.search_container input[type="submit"] {
+  cursor: pointer;
+  font-family: FontAwesome;
+  font-size: 1.3em;
+  border: none;
+  background: none;
+  color: #3879d9;
+  outline: none;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#not-found {
+  font-size: 20px;
+  margin-left: 100px;
+}
+@media screen and (max-width: 870px) {
+  #not-found {
+    margin: 0;
+    text-align: center;
+  }
+}
+
+.result-box {
+  position: relative;
+  margin: auto;
+  width: 80%;
+  margin: 30px auto;
+  padding: 0.5em 1em;
+  border: solid 3px #95ccff;
+  border-radius: 8px;
+}
+.result-box .box-title {
+  position: absolute;
+  display: inline-block;
+  top: -13px;
+  left: 10px;
+  padding: 0 9px;
+  line-height: 1;
+  font-size: 19px;
+  background: #fff;
+  color: #2997ff;
+  font-weight: bold;
+}
+.result-box p {
+  margin: 0;
+  padding: 0;
+}
+
+.box-title:hover {
+  border-bottom: solid 2px #2997ff;
+}
