--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -2,9 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-style: normal;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "游明朝", "Yu Mincho", YuMincho, "Hiragino Mincho Pro", serif;
   -webkit-overflow-scrolling: auto;
 }
 li {
@@ -374,6 +372,10 @@ body::-webkit-scrollbar {
 
 #header #title {
   left: 180px;
+  font-weight: 400;
+}
+#header #title-ja {
+  left: 100px;
   font-weight: 400;
 }
 
