--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -550,3 +550,16 @@ body::-webkit-scrollbar {
 .box-title:hover {
   border-bottom: solid 2px #2997ff;
 }
+
+@media screen and (max-width: 870px) {
+  #achievement {
+    margin: 50px auto;
+    width: 90vw;
+  }
+}
+@media screen and (min-width: 870px) {
+  #achievement {
+    margin: 50px auto;
+    width: 80vw;
+  }
+}
