--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -268,6 +268,7 @@
 }
 
 #video-area #message-ja {
+  font-family: "游明朝", "Yu Mincho", YuMincho, "Hiragino Mincho Pro", serif;
   z-index: 1;
   font-weight: 400;
   /*要素の配置*/
@@ -291,7 +292,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 800px) {
   #video-area #message {
     padding-left: 10px;
     font-size: 40px;
@@ -300,13 +301,13 @@
   }
   #video-area #message-ja {
     padding-left: 10px;
-    font-size: 4vw;
+    font-size: 30px;
     left: 40%;
     width: 60vw;
   }
 }
 
-@media screen and (min-width: 870px) and (max-width: 1150px) {
+@media screen and (min-width: 800px) and (max-width: 1150px) {
   #video-area #message {
     font-size: 50px;
     width: 530px;
