軽微な修正,寮生用ページの寮と高専のコンテンツの分類を明確化

--- a/assets/styles/facility.css
+++ b/assets/styles/facility.css
@@ -1,6 +1,9 @@
 .facility {
   text-align: center;
 }
+img {
+  border-radius: 2.5%;
+}
 
 @media screen and (min-width: 870px) {
   .facility_element img {
