--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -100,6 +100,9 @@ h4 {
   .pair-left .left-content {
     margin-right: 30px;
   }
+  .radius-img {
+    border-radius: 5%;
+  }
 }
 @media screen and (min-width: 1270px) {
   /* 縦長の写真を調節 */
@@ -112,6 +115,9 @@ h4 {
   }
   .pair-left .left-content {
     margin-right: 6vw;
+  }
+  .radius-img {
+    border-radius: 5%;
   }
 }
 
